@@ -1,4 +1,8 @@
 2009-12-14  Neil Horman <nhorman@tuxdriver.com>
+	* src/main.c: Added missing line mode operation options to
+	parse_arguments
+
+2009-12-14  Neil Horman <nhorman@tuxdriver.com>
 	* src/main.c: Fixed adjustments to argc/argv in parse_option to account
 	for the possibility that someone might specify multiple options in
 	one argument (-ab vs. -a -b)
